editoast: do not panic on incorrect pagination
