# editoast/openapi.yaml
@@ -4248,7 +4248,10 @@ components:
       - $ref: '#/components/schemas/EditoastOperationErrorInvalidPatch'
       - $ref: '#/components/schemas/EditoastOperationErrorModifyId'
       - $ref: '#/components/schemas/EditoastOperationErrorObjectNotFound'
+      - $ref: '#/components/schemas/EditoastPaginationErrorInvalidPageNumber'
       - $ref: '#/components/schemas/EditoastPaginationErrorInvalidPageSize'
+      - $ref: '#/components/schemas/EditoastPaginationErrorPageOutOfBound'
+      - $ref: '#/components/schemas/EditoastPaginationErrorPageSizeTooBig'
       - $ref: '#/components/schemas/EditoastPathfindingErrorInfraNotFound'
       - $ref: '#/components/schemas/EditoastPathfindingViewErrorsEndingTrackLocationNotFound'
       - $ref: '#/components/schemas/EditoastPathfindingViewErrorsInvalidNumberOfPaths'
@@ -4774,7 +4777,85 @@ components:
           type: string
           enum:
           - editoast:operation:ObjectNotFound
+    EditoastPaginationErrorInvalidPageNumber:
+      type: object
+      required:
+      - type
+      - status
+      - message
+      properties:
+        context:
+          type: object
+          required:
+          - page
+          properties:
+            page:
+              type: integer
+        message:
+          type: string
+        status:
+          type: integer
+          enum:
+          - 400
+        type:
+          type: string
+          enum:
+          - editoast:pagination:InvalidPageNumber
     EditoastPaginationErrorInvalidPageSize:
+      type: object
+      required:
+      - type
+      - status
+      - message
+      properties:
+        context:
+          type: object
+          required:
+          - page_size
+          properties:
+            page_size:
+              type: integer
+        message:
+          type: string
+        status:
+          type: integer
+          enum:
+          - 400
+        type:
+          type: string
+          enum:
+          - editoast:pagination:InvalidPageSize
+    EditoastPaginationErrorPageOutOfBound:
+      type: object
+      required:
+      - type
+      - status
+      - message
+      properties:
+        context:
+          type: object
+          required:
+          - page
+          - page_size
+          - total_count
+          properties:
+            page:
+              type: integer
+            page_size:
+              type: integer
+            total_count:
+              type: integer
+        message:
+          type: string
+        status:
+          type: integer
+          enum:
+          - 404
+        type:
+          type: string
+          enum:
+          - editoast:pagination:PageOutOfBound
+    EditoastPaginationErrorPageSizeTooBig:
       type: object
       required:
       - type
@@ -4800,7 +4881,7 @@ components:
         type:
           type: string
           enum:
-          - editoast:pagination:InvalidPageSize
+          - editoast:pagination:PageSizeTooBig
     EditoastPathfindingErrorInfraNotFound:
       type: object
       required:
